-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 26
-
Component/s: hotspot
-
b24
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8377083 | 25.0.3 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
| JDK-8377696 | 21.0.11 | Goetz Lindenmaier | P3 | Resolved | Fixed | b03 |
| JDK-8377700 | 17.0.19 | Goetz Lindenmaier | P3 | Resolved | Fixed | b03 |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/526fbd26-20de-495c-9a19-a04adc16f7d1-S23856/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/b2f6dc6f-febe-439d-8ace-c5e52cb44044/runs/a0fc9155-3bef-4f7f-bcd6-8075dbe18a0d/workspace/open/src/hotspot/share/runtime/interfaceSupport.inline.hpp:187), pid=6409, tid=33539
# assert(!thread->owns_locks()) failed: must release all locks when leaving VM
#
# JRE version: Java(TM) SE Runtime Environment (26.0+23) (fastdebug build 26-ea+23-2299)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 26-ea+23-2299, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-aarch64)
# Core dump will be written. Default location: core.6409
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
Current thread (0x0000000141015e10): JavaThread "JVMTI agent thread" daemon [_thread_in_vm, id=33539, stack(0x000000016e1c0000,0x000000016e3c3000) (2060K)]
Stack: [0x000000016e1c0000,0x000000016e3c3000], sp=0x000000016e3c26d0, free space=2057k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x123dea8] VMError::report(outputStream*, bool)+0x1b68 (interfaceSupport.inline.hpp:187)
V [libjvm.dylib+0x12417a4] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void const*, void const*, char const*, int, unsigned long)+0x55c
V [libjvm.dylib+0x5bad40] print_error_for_unit_test(char const*, char const*, char*)+0x0
V [libjvm.dylib+0x4ac340] GrowableArray<ModuleClassPathList*>::GrowableArray(int, MemTag)+0x0
V [libjvm.dylib+0xc30218] JvmtiExport::post_object_free(JvmtiEnv*, GrowableArray<long>*)+0x2a0
V [libjvm.dylib+0xc57c64] JvmtiTagMap::remove_and_post_dead_objects()+0x140
V [libjvm.dylib+0xc57e90] JvmtiTagMap::flush_object_free_events()+0x100
V [libjvm.dylib+0xc256a0] JvmtiEventControllerPrivate::set_event_callbacks(JvmtiEnvBase*, jvmtiEventCallbacks const*, int)+0x158
V [libjvm.dylib+0xc2749c] JvmtiEventController::set_event_callbacks(JvmtiEnvBase*, jvmtiEventCallbacks const*, int)+0x54
V [libjvm.dylib+0xc01d48] JvmtiEnv::SetEventCallbacks(jvmtiEventCallbacks const*, int)+0x4c
V [libjvm.dylib+0xbb4d70] jvmti_SetEventCallbacks(_jvmtiEnv*, jvmtiEventCallbacks const*, int)+0x150
C [libem02t006.dylib+0xb434] setCallBacks(int)+0x204
C [libem02t006.dylib+0xb520] agentProc(_jvmtiEnv*, JNIEnv_*, void*)+0xb0
C [libem02t006.dylib+0xb754] agentThreadWrapper(_jvmtiEnv*, JNIEnv_*, void*)+0x1c0
V [libjvm.dylib+0xc3f8c8] JvmtiAgentThread::start_function_wrapper(JavaThread*, JavaThread*)+0x88
V [libjvm.dylib+0x922828] JavaThread::thread_main_inner()+0x1d0
V [libjvm.dylib+0x117de1c] Thread::call_run()+0xf0
V [libjvm.dylib+0xedae7c] thread_native_entry(Thread*)+0x138
C [libsystem_pthread.dylib+0x6bc8] _pthread_start+0x88
Lock stack of current Java thread (top to bottom):
- backported by
-
JDK-8377083 vmTestbase/nsk/jvmti/scenarios/events/EM02/em02t006/TestDescription.java failing
-
- Resolved
-
-
JDK-8377696 vmTestbase/nsk/jvmti/scenarios/events/EM02/em02t006/TestDescription.java failing
-
- Resolved
-
-
JDK-8377700 vmTestbase/nsk/jvmti/scenarios/events/EM02/em02t006/TestDescription.java failing
-
- Resolved
-
- caused by
-
JDK-8212879 Make JVMTI TagMap table concurrent
-
- Resolved
-
- relates to
-
JDK-8370732 Use WhiteBox.getWhiteBox().fullGC() to provoking gc for nsk/jvmti tests
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk17u-dev/006b7b1c
-
Commit(master)
openjdk/jdk21u-dev/8b530dec
-
Commit(master)
openjdk/jdk25u-dev/b86df367
-
Commit(master)
openjdk/jdk/88c4678e
-
Review(master)
openjdk/jdk17u-dev/4254
-
Review(master)
openjdk/jdk21u-dev/2597
-
Review(master)
openjdk/jdk25u-dev/213
-
Review(master)
openjdk/jdk/28184