8371103: vmTestbase/nsk/jvmti/scenarios/events/EM02/em02t006/TestDescription.java failing

Backport-of: b86df36731582c6d36e973410f178edb43bc9976